tests/cases/ownership/errors/own-bool-condition.ari
fn main() -> i64 {
  let condition: own bool = true;
  if condition {
    return 1;
  }
  drop condition;
  return 0;
}
